<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.interacto</groupId>
    <artifactId>example-jfx-drawingeditor</artifactId>
    <version>4.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jfx.version>11.0.2</jfx.version>
        <java.version>11</java.version>
        <junit.version>5.6.0</junit.version>
        <javafx.platform>linux</javafx.platform>
        <jmods.path>${java.home}</jmods.path>
    </properties>

    <profiles>
        <profile>
            <id>win</id>
            <properties>
                <javafx.platform>win</javafx.platform>
                <jmods.path>/opt/jdk-11-win</jmods.path>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <javafx.platform>mac</javafx.platform>
                <jmods.path>/opt/jdk-11-mac/Contents/Home</jmods.path>
            </properties>
        </profile>
    </profiles>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0.Beta2</version>
                <executions>
                    <execution>
                        <id>generate-module-info</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>generate-module-info</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/module-info-gen</outputDirectory>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>io.reactivex.rxjava2</groupId>
                                        <artifactId>rxjava</artifactId>
                                        <version>2.2.4</version>
                                    </artifact>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.reactivestreams</groupId>
                                        <artifactId>reactive-streams</artifactId>
                                        <version>1.0.2</version>
                                    </artifact>
                                </module>
                            </modules>
                        </configuration>
                    </execution>

                    <execution>
                        <id>add-module-infos</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>io.reactivex.rxjava2</groupId>
                                        <artifactId>rxjava</artifactId>
                                        <version>2.2.4</version>
                                    </artifact>
                                    <moduleInfoFile>
                                        ${project.build.directory}/module-info-gen/io.reactivex.rxjava2/module-info.java
                                    </moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.reactivestreams</groupId>
                                        <artifactId>reactive-streams</artifactId>
                                        <version>1.0.2</version>
                                    </artifact>
                                    <moduleInfoFile>
                                        ${project.build.directory}/module-info-gen/org.reactivestreams/module-info.java
                                    </moduleInfoFile>
                                </module>
                            </modules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>main deps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <excludeClassifiers>linux,win,mac</excludeClassifiers>
                            <excludeGroupIds>org.reactivestreams,io.reactivex.rxjava2</excludeGroupIds>
                            <outputDirectory>
                                ${project.build.directory}/modules
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>

                    <execution>
                        <id>JFX deps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <classifier>${javafx.platform}</classifier>
                            <outputDirectory>
                                ${project.build.directory}/modules
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>main module</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jar</executable>
                            <arguments>
                                <argument>--update</argument>
                                <argument>--file=${project.build.directory}/modules/${project.build.finalName}.jar</argument>
                                <argument>--main-class=io.github.interacto.ex.draw.Editor</argument>
                                <argument>--module-version=${project.version}</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>jlink</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jlink</executable>
                            <arguments>
                                <argument>--module-path=${project.build.directory}/modules:${jmods.path}/jmods</argument>
                                <argument>--add-modules=interacto.ex.drawingEditor</argument>
                                <argument>--launcher=run=interacto.ex.drawingEditor/io.github.interacto.ex.draw.Editor</argument>
                                <argument>--output=${project.build.directory}/drawingEditor-${project.version}</argument>
                                <argument>--strip-debug</argument>
                                <argument>--compress=2</argument>
                                <argument>--no-man-pages</argument>
                                <argument>--no-header-files</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    <useModulePath>false</useModulePath>
                    <argLine>
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
                        --add-exports interacto.ex.drawingEditor/io.github.interacto.ex.draw.model=ALL-UNNAMED
                        --add-exports interacto.ex.drawingEditor/io.github.interacto.ex.draw.command=ALL-UNNAMED
                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                        --add-opens interacto.ex.drawingEditor/io.github.interacto.ex.draw.model=ALL-UNNAMED
                        --add-opens interacto.ex.drawingEditor/io.github.interacto.ex.draw.command=ALL-UNNAMED
                        -Xmx4000m
                        -Dglass.platform=Monocle
                        -Dheadless.geometry=1280x1024-32
                        -Djava.awt.headless=true
                        -Dtestfx.robot=glass
                        -Dtestfx.headless=true
                        -Dprism.order=sw</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.github.interacto</groupId>
            <artifactId>interacto-javafx</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
            <groupId>io.github.interacto</groupId>
            <artifactId>interacto-javafx-test</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.2.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>jdk-11+26</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>mavenInriaSnapshot</id>
            <name>http://maven.inria.fr-snapshots</name>
            <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
            <snapshots><enabled>true</enabled></snapshots>
            <releases><enabled>false</enabled></releases>
        </repository>
    </repositories>
</project>

